feat: Adding multilanguage feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <p id="role"></p>
           </div>
         </div>
+        <div class="hero__actions">
+          <span class="public-view-badge" id="public-view-badge">Public view</span>
+          <div
+            class="language-switcher"
+            id="language-switcher"
+            role="group"
+            aria-label="Language"
+          ></div>
+        </div>
       </header>
 
       <main class="layout">
@@ -84,7 +93,7 @@
           <section class="card">
             <div class="section-title">
               <span class="section-dot" aria-hidden="true"></span>
-              <h2>Personal Info</h2>
+              <h2 id="personal-info-heading">Personal Info</h2>
             </div>
             <dl id="contact-list" class="contact-list"></dl>
             <div id="qr-list" class="qr-list"></div>
@@ -93,7 +102,7 @@
           <section class="card">
             <div class="section-title">
               <span class="section-dot" aria-hidden="true"></span>
-              <h2>Skills</h2>
+              <h2 id="skills-heading">Skills</h2>
             </div>
             <div id="skills-list" class="meter-list"></div>
           </section>
@@ -101,7 +110,7 @@
           <section class="card">
             <div class="section-title">
               <span class="section-dot" aria-hidden="true"></span>
-              <h2>Tech stack</h2>
+              <h2 id="tech-stack-heading">Tech stack</h2>
             </div>
             <ul id="tech-stack" class="pill-list"></ul>
           </section>
@@ -109,7 +118,7 @@
           <section class="card">
             <div class="section-title">
               <span class="section-dot" aria-hidden="true"></span>
-              <h2>Languages</h2>
+              <h2 id="languages-heading">Languages</h2>
             </div>
             <div id="languages-list" class="meter-list meter-list--compact"></div>
           </section>
@@ -117,7 +126,7 @@
           <section class="card">
             <div class="section-title">
               <span class="section-dot" aria-hidden="true"></span>
-              <h2>Interests</h2>
+              <h2 id="interests-heading">Interests</h2>
             </div>
             <ul id="interests-list" class="pill-list"></ul>
           </section>
