--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     </div>
 
     <script src="scripts/js-yaml.min.js"></script>
+    <script src="scripts/admin-config.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
