feat: harden data loading

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="styles/general.css" />
   </head>
   <body data-view-mode="public">
+    <div class="loading-indicator" id="app-loading-indicator" aria-live="polite" aria-hidden="true" hidden>
+      Loading resume data…
+    </div>
     <div class="resume">
         <header class="hero" aria-label="Profile summary">
           <div class="hero__title">
