--- a/user.html
+++ b/user.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex,nofollow" />
     <title>Resume Studio Editor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,6 +37,9 @@
               ></div>
             </div>
             <span class="public-view-badge" id="public-view-badge">Public view</span>
+            <button class="hero__download-button" id="download-ats-button" type="button" disabled>
+              Download ATS text
+            </button>
             <button class="hero__login-button hero__logout-button" id="admin-logout-button" type="button" hidden>
               Save
             </button>
